<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#ffffff">

        <!--  Header  Starts-->
        <LinearLayout android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="110dp"
            android:background="@layout/header_gradient"
            android:paddingTop="5dip"
            android:paddingBottom="5dip">
            <!-- Logo Start-->
            <ImageView android:src="@drawable/ic_logo"
                android:layout_width="150dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/TextViewContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="13sp"
                />
            <!-- Logo Ends -->
        </LinearLayout>
        <!--  Header Ends -->
        <!-- Footer Start -->
        <LinearLayout android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="90dip"
            android:background="@layout/footer_repeat"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
        </LinearLayout>
        <!-- Footer Ends -->

        <!-- Login Form -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:layout_below="@id/header">

            <ImageView android:src="@drawable/contact_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginLeft="5dip"/>

            <EditText
                android:id="@+id/EditTextName"
                android:layout_height="wrap_content"
                android:hint="@string/feedbackname"
                android:inputType="textPersonName"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:layout_width="fill_parent">
            </EditText>

            <Spinner
                android:id="@+id/SpinnerFeedbackType"
                android:layout_height="wrap_content"
                android:prompt="@string/feedbacktype"
                android:layout_width="fill_parent"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:entries="@array/feedbacktypelist">
            </Spinner>

            <EditText
                android:id="@+id/EditTextFeedbackBody"
                android:layout_height="wrap_content"
                android:hint="@string/feedbackbody"
                android:inputType="textMultiLine"
                android:lines="3"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:layout_width="fill_parent">
            </EditText>

            <CheckBox
                android:id="@+id/CheckBoxResponse"
                android:layout_height="wrap_content"
                android:text="@string/feedbackresponse"
                android:layout_marginTop="15dp"
                android:layout_width="fill_parent">
            </CheckBox>

            <Button
                android:id="@+id/ButtonSendFeedback"
                android:layout_height="wrap_content"
                android:text="@string/feedbackbutton"
                android:onClick="sendFeedback"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:layout_width="fill_parent">
            </Button>


        </LinearLayout>
        <!-- Login Form Ends -->
    </RelativeLayout>
</ScrollView>